--- a/TapTap_Data_Analysis/game_info.html
+++ b/TapTap_Data_Analysis/game_info.html
@@ -43,7 +43,17 @@
         <div class="header_item col-md-1" style="background:url('./img/main_page.PNG') no-repeat;background-position:center"></div>
         <div class="header_item col-md-1" style="background:url('./img/all.PNG') no-repeat;background-position:center"></div>
     </div>
-    <div class="game_info"></div>
-    <div class="chart_list"></div>
+    <div class="game_info" style="float:left;">
+        <img class="game_avatar" src="" alt="">
+        <p class="updata_time"></p>
+        <p class="game_name"></p>
+        <p class="game_summary"></p>
+        <p class="game_recomment"></p>
+        <p class="game_bad"></p>
+        <p class="game_good"></p>
+    </div>
+    <div class="chart_list">
+        
+    </div>
 </body>
 </html>
