--- a/TapTap_Data_Analysis/main.html
+++ b/TapTap_Data_Analysis/main.html
@@ -57,79 +57,106 @@
 
         .num_blank {
             float: left;
-            width: 50px;
             width: 55px;
         }
 
         .num_1 {
-            animation: num_1 ease-in-out 2s;
             height: 55px;
             width: 50px;
             background: url('./img/num.PNG') no-repeat;
-            background-position: 0px 0px
+            background-position: 0px 0px;
+            width: 36px;
+            transition: all 2s ease;
+            float: left;
         }
 
         .num_2 {
             height: 55px;
             width: 50px;
             background: url('./img/num.PNG') no-repeat;
-            background-position: 0px -53px
+            background-position: 0px -53px;
+            width: 36px;
+            transition: all 2s ease;
+            float: left;
         }
 
         .num_3 {
             height: 55px;
             width: 50px;
             background: url('./img/num.PNG') no-repeat;
-            background-position: 0px -107px
+            background-position: 0px -107px;
+            width: 36px;
+            transition: all 2s ease;
+            float: left;
         }
 
         .num_4 {
             height: 55px;
             width: 50px;
             background: url('./img/num.PNG') no-repeat;
-            background-position: 0px -160px
+            background-position: 0px -160px;
+            width: 36px;
+            transition: all 2s ease;
+            float: left;
         }
 
         .num_5 {
             height: 55px;
             width: 50px;
             background: url('./img/num.PNG') no-repeat;
-            background-position: 0px -213px
+            background-position: 0px -213px;
+            width: 36px;
+            transition: all 2s ease;
+            float: left;
         }
 
         .num_6 {
             height: 55px;
             width: 50px;
             background: url('./img/num.PNG') no-repeat;
-            background-position: 0px -270px
+            background-position: 0px -270px;
+            width: 36px;
+            transition: all 2s ease;
+            float: left;
         }
 
         .num_7 {
             height: 55px;
             width: 50px;
             background: url('./img/num.PNG') no-repeat;
-            background-position: 0px -320px
+            background-position: 0px -320px;
+            width: 36px;
+            transition: all 2s ease;
+            float: left;
         }
 
         .num_8 {
             height: 55px;
             width: 50px;
             background: url('./img/num.PNG') no-repeat;
-            background-position: 0px -373px
+            background-position: 0px -373px;
+            width: 36px;
+            transition: all 2s ease;
+            float: left;
         }
 
         .num_9 {
             height: 55px;
             width: 50px;
             background: url('./img/num.PNG') no-repeat;
-            background-position: 0px -427px
+            background-position: 0px -427px;
+            width: 36px;
+            transition: all 2s ease;
+            float: left;
         }
 
         .num_0 {
             height: 55px;
             width: 50px;
             background: url('./img/num.PNG') no-repeat;
-            background-position: 0px -480px
+            background-position: 0px -480px;width: 36px;
+            transition: all 2s ease;
+            float: left;
         }
 
         .change_num>div {
@@ -156,8 +183,8 @@
     </div>
     <div class="change_num " style="height:500px;width:100%;position:absolute;top:600px">
         <div class="user col-md-3">
-            <div class="user_text" style="background-size:contain;width:100%;height:110px;background:url('./img/user.PNG') no-repeat;background-size:90%"></div>
-            <div class="num_blank"></div>
+            <p class="user_text" style="background-size:contain;width:100%;height:110px;background:url('./img/user.PNG') no-repeat;background-size:90%"></p>
+
             <div class="num"></div>
             <div class="num"></div>
             <div class="num"></div>
@@ -168,8 +195,8 @@
             <div class="num"></div>
         </div>
         <div class="game col-md-3">
-            <div class="game_text" style="background-size:contain;width:100%;height:110px;background:url('./img/game_1.PNG') no-repeat;background-size:90%"></div>
-            <div class="num_blank"></div>
+            <p class="game_text" style="background-size:contain;width:100%;height:110px;background:url('./img/game_1.PNG') no-repeat;background-size:90%"></p>
+    
             <div class="num"></div>
             <div class="num"></div>
             <div class="num"></div>
@@ -180,8 +207,8 @@
             <div class="num"></div>
         </div>
         <div class="user_relation col-md-3">
-            <div class="user_relation_text" style="background-size:contain;width:100%;height:110px;background:url('./img/user_net.PNG') no-repeat;background-size:90%"></div>
-            <div class="num_blank"></div>
+            <p class="user_relation_text" style="background-size:contain;width:100%;height:110px;background:url('./img/user_net.PNG') no-repeat;background-size:90%"></p>
+    
             <div class="num"></div>
             <div class="num"></div>
             <div class="num"></div>
@@ -192,8 +219,7 @@
             <div class="num"></div>
         </div>
         <div class="commit col-md-3">
-            <div class="commit_text" style="background-size:contain;width:100%;height:110px;background:url('./img/commit.PNG') no-repeat;background-size:90%"></div>
-            <div class="num_blank"></div>
+            <p class="commit_text" style="background-size:contain;width:100%;height:110px;background:url('./img/commit.PNG') no-repeat;background-size:90%"></p>
             <div class="num"></div>
             <div class="num"></div>
             <div class="num"></div>
@@ -230,17 +256,11 @@
                     var ul_num = addPreZero(data[2]);
                     var commit_num = addPreZero(data[3]);
 
-                    for (let i = 0; i < user_num.length; i++) {
-                        $(".user .num").eq(i).addClass("num_" + user_num[i]);
-                    }
-                    for (let i = 0; i < user_num.length; i++) {
-                        $(".game .num").eq(i).addClass("num_" + game_num[i]);
-                    }
-                    for (let i = 0; i < user_num.length; i++) {
-                        $(".user_relation .num").eq(i).addClass("num_" + ul_num[i]);
-                    }
-                    for (let i = 0; i < user_num.length; i++) {
-                        $(".commit .num").eq(i).addClass("num_" + commit_num[i]);
+                    for (let i = 0; i < 8; i++) {
+                        $(".user>div").eq(i).attr("class","num_"+user_num[i]);
+                        $(".game>div").eq(i).attr("class","num_"+game_num[i]);
+                        $(".user_relation>div").eq(i).attr("class","num_"+ul_num[i] );
+                        $(".commit>div").eq(i).attr("class","num_"+commit_num[i]);
                     }
 
                 },
@@ -249,7 +269,7 @@
                 }
             })
         }
-        window.onload=setInterval(ajax_insert,1000);
+        window.onload=setInterval(ajax_insert,5000);
 
 
         function addPreZero(num) {
@@ -279,8 +299,8 @@
             camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 1, 20000);
             camera.position.y = getY(worldHalfWidth, worldHalfDepth) * 100 + 100;
             controls = new THREE.FirstPersonControls(camera);
-            controls.movementSpeed = 1000;
-            controls.lookSpeed = 0.125;
+            controls.movementSpeed = 100;
+            controls.lookSpeed = 0.025;
             controls.lookVertical = true;
             scene = new THREE.Scene();
             scene.background = new THREE.Color(0xbfd1e5);
